<resources>
    <string name="app_name">AskBuddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_questions">Questions</string>

    <string name="nav_question_feeds">Ask Question</string>
    <string name="nav_question_list">Questions</string>
    <string name="nav_my_question">My Questions</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_disciple_category">Discipleship</string>
    <string name="nav_disciple">Disciple</string>

    <string name="demo_user">\@sirajen</string>
    <string name="hello_questions_fragment">Question Fragement</string>
    <string name="hello_my_question_fragment">Question Fragement</string>

    <string name="question_hint">What\'s on your mind?</string>
    <string name="question_button">Ask</string>

    <string name="comment_hint">Write a comment…</string>
</resources>
