<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ask_question"
            android:icon="@drawable/ic_bubble_chart_black_18dp"
            android:title="@string/nav_question_feeds" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/ic_question_answer_black_18dp"
            android:title="@string/nav_question_list" />
        <item
            android:id="@+id/nav_my_questions"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/nav_my_question" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_favourite" />

    </group>
    <item
        android:id="@+id/discipleship_category"
        android:title="@string/nav_disciple_category"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_disciples"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/nav_disciple" />
            <item
                android:id="@+id/Materials"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
</menu>
